# video-deepstream-pipeline-cpp

./: CMakeLists.txt  deepstream_test2_app.cpp  video-deepstream-pipeline-cpp.Dockerfile
